<resources>
    <string name="app_name">EasyLock</string>
    <string name="app_logo">App logo</string>
    <string name="main_menu_message">Bienvenido a EasyLock!</string>
<!--    Mainmenu-->
    <string name="continue_btn">Continuar</string>
    <string name="main_menu_choice">Seleccione una opción</string>
    <string name="face_icon">Face icon</string>
    <string name="fingerprint_icon">Fingerprint icon</string>
    <string name="logs_icon">Logs icon</string>
    <string name="exit">Salir</string>
<!--    Camera-->
    <string name="predicted">Predicción: </string>
    <string name="confidence">Confianza: </string>
    <string name="picture">Tomar foto</string>
<!--    Bluetooth-->
    <string name="connect">Conectar</string>
    <string name="select_device">Seleccione un dispositivo</string>
    <string name="no_paired_device">No tiene dispositivos vinculados. \nVinculé e intente de nuevo</string>
    <string name="controls">Controles</string>
    <string name="intentos_de_apertura">Intentos de apertura</string>
    <string name="open_success">\u2022 Apertura exitosa</string>
    <string name="open_failure">\u2022 Apertura fallida</string>
    <string name="close_success">\u2022 Cerradura asegurada</string>
    <string name="delete_logs">Eliminar registros</string>
    <string name="dash">-</string>
    <string name="close_icon">Close icon</string>
    <string name="imprimir_registros">Imprimir registros</string>
    <string name="pair_device">Emparejar dispositivo</string>
    <string name="negative">negative</string>
    <string name="reload_devices">Recargar dispositivos</string>

</resources>