<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_axis_lock"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_message"
        android:textColor="@color/light_white"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="20sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConnect"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:textAllCaps="true"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/controls"
        android:textAllCaps="true"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"/>


</LinearLayout>