<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_menu_choice"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/background_color"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/white"
            app:strokeWidth="5dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/face_icon"
                android:src="@drawable/ic_face_24"
                app:tint="@color/white" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_color"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/white"
            app:strokeWidth="5dp"

            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/fingerprint_icon"
                android:src="@drawable/ic_fingerprint_24"
                app:tint="@color/white" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:text="@string/exit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>