<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".CameraActivity">

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/ivPicture"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearPredictions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPicture"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/predicted"/>
        <TextView
            android:id="@+id/tvPrediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:text="PRECITION"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearPredictions"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/confidence" />
        <TextView
            android:id="@+id/tvConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:text="CONFIDENCE" />

    </LinearLayout>

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/ivFace"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnPicture" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPicture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/picture"/>

</androidx.constraintlayout.widget.ConstraintLayout>